# rules_julia

./: CONTRIBUTING.md  MODULE.bazel  README.md
.github/workflows/: release.yml
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
julia/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
julia/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
julia/tests/: versions_test.bzl
