# Override http_archive for local testing
local_repository(
    name = "com_google_trhodeos_rules_julia",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_julia setup #
######################
# Fetches the rules_julia dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_google_trhodeos_rules_julia//julia:repositories.bzl", "julia_repositories", "rules_julia_dependencies")

rules_julia_dependencies()

julia_repositories(
    name = "julia",
    julia_version = "1.9.2",
)
